# vibe

./: AGENTS.md  Cargo.toml  README.md
core/: Cargo.toml
core/src/: downloader.rs  transcribe.rs
desktop/: bun.lockb  package-lock.json  package.json  tailwind.config.js
desktop/patches/pyannote-rs-0.2.7/: .cargo_vcs_info.json  Cargo.toml
desktop/src/: App.tsx
desktop/src/components/: Params.tsx  SubtitleEditor.tsx
desktop/src/lib/: logs.ts  transcript.ts  useSingleInstance.tsx
desktop/src/pages/batch/: viewModel.tsx
desktop/src/pages/convert/: Page.tsx
desktop/src/pages/editor/: Page.tsx
desktop/src/pages/home/: Page.tsx  viewModel.ts
desktop/src/pages/settings/: Page.tsx  viewModel.ts
desktop/src/providers/: Preference.tsx
docs/: building.md  editor.md
landing/src/components/: Nav.svelte
landing/src/lib/: i18n.ts
landing/static/locales/: en-US.json  es-MX.json  fr-FR.json  he-IL.json  ko-KR.json  no-NO.json  pl-PL.json  pt-BR.json  ru-RU.json  zh-CN.json  zh-HK.json
